src/resources/securityGroup-acl.yml
# ==================================================
#  SecurityGroup定義
# ==================================================

CorporateAlbSecurityGroup:
  Type: AWS::EC2::SecurityGroup
  Properties:
    GroupName: CorporateAlbSecurityGroup
    GroupDescription: SecurityGroup For Corporate ALB
    VpcId: !Ref CommonVpc
    SecurityGroupIngress:
      - {
          IpProtocol: tcp,
          FromPort: 443,
          ToPort: 443,
          CidrIp: 221.115.227.202/32,
          Description: HTTPS setting for Scramble Square 24F,
        }
      - {
          IpProtocol: tcp,
          FromPort: 443,
          ToPort: 443,
          CidrIp: 221.115.214.162/32,
          Description: HTTPS setting for Scramble Square 25F,
        }
    Tags:
      - Key: Name
        Value: corp-wordpress-alb

CorporateWebServerSecurityGroup:
  Type: AWS::EC2::SecurityGroup
  Properties:
    GroupName: CorporateWebServerSecurityGroup
    GroupDescription: SecurityGroup For Corporate WebServer
    VpcId: !Ref CommonVpc
    SecurityGroupIngress:
      - {
          IpProtocol: tcp,
          FromPort: 80,
          ToPort: 80,
          CidrIp: 0.0.0.0/0,
          Description: HTTP setting for alb-security-group,
        }
      - {
          IpProtocol: tcp,
          FromPort: 22,
          ToPort: 22,
          CidrIp: 221.112.40.106/32,
          Description: SSH setting for VPN,
        }
      - {
          IpProtocol: tcp,
          FromPort: 22,
          ToPort: 22,
          CidrIp: 221.115.227.202/32,
          Description: SSH setting for Scramble Square 24F-main,
        }
      - {
          IpProtocol: tcp,
          FromPort: 22,
          ToPort: 22,
          CidrIp: 202.215.75.103/32,
          Description: SSH setting for Scramble Square 24F-backup,
        }
      - {
          IpProtocol: tcp,
          FromPort: 22,
          ToPort: 22,
          CidrIp: 113.33.145.46/32,
          Description: SSH setting for Scramble Square 24F-main-2,
        }
      - {
          IpProtocol: tcp,
          FromPort: 22,
          ToPort: 22,
          CidrIp: 220.247.125.250/32,
          Description: SSH setting for Scramble Square 24F-backup-2,
        }
      - {
          IpProtocol: tcp,
          FromPort: 22,
          ToPort: 22,
          CidrIp: 221.115.214.162/32,
          Description: SSH setting for Scramble Square 25F-main,
        }
      - {
          IpProtocol: tcp,
          FromPort: 22,
          ToPort: 22,
          CidrIp: 202.215.75.197/32,
          Description: SSH setting for Scramble Square 25F-backup,
        }
      - {
          IpProtocol: tcp,
          FromPort: 22,
          ToPort: 22,
          CidrIp: 113.33.145.50/32,
          Description: SSH setting for Scramble Square 25F-main-2,
        }
      - {
          IpProtocol: tcp,
          FromPort: 22,
          ToPort: 22,
          CidrIp: 220.247.125.251/32,
          Description: SSH setting for Scramble Square 25F-backup-2,
        }
    Tags:
      - Key: Name
        Value: corp-wodpress-web-server

CommonRdsSecurityGroup:
  Type: AWS::EC2::SecurityGroup
  Properties:
    GroupName: CommonRdsSecurityGroup
    GroupDescription: SecurityGroup For Common RDS
    VpcId: !Ref CommonVpc
    SecurityGroupIngress:
      - {
          IpProtocol: tcp,
          FromPort: 3306,
          ToPort: 3306,
          CidrIp: 192.168.1.0/24,
          Description: MySQL setting for CorporatePublicSubnet1,
        }
      - {
          IpProtocol: tcp,
          FromPort: 3306,
          ToPort: 3306,
          CidrIp: 192.168.2.0/24,
          Description: MySQL setting for CorporatePublicSubnet2,
        }
    Tags:
      - Key: Name
        Value: corp-wordpress-rds

# ==================================================
#  NetworkACL定義
# ==================================================

# CorporatePublicSubnet関連
CorporatePublicSubnetAcl:
  Type: AWS::EC2::NetworkAcl
  Properties:
    VpcId: !Ref CommonVpc
    Tags:
      - Key: Name
        Value: corporate-public-subnet
CorporatePublicSubnetAclEntryIn100:
  Type: AWS::EC2::NetworkAclEntry
  Properties:
    NetworkAclId: !Ref CorporatePublicSubnetAcl
    RuleNumber: 100
    Protocol: -1
    RuleAction: deny
    Egress: false
    CidrBlock: 103.119.129.23/32
CorporatePublicSubnetAclEntryIn200:
  Type: AWS::EC2::NetworkAclEntry
  Properties:
    NetworkAclId: !Ref CorporatePublicSubnetAcl
    RuleNumber: 200
    Protocol: -1
    RuleAction: allow
    Egress: false
    CidrBlock: 0.0.0.0/0
CorporatePublicSubnetAclEntryOut200:
  Type: AWS::EC2::NetworkAclEntry
  Properties:
    NetworkAclId: !Ref CorporatePublicSubnetAcl
    RuleNumber: 200
    Protocol: -1
    RuleAction: allow
    Egress: true
    CidrBlock: 0.0.0.0/0
CorporatePublicSubnetAclAssociation1:
  Type: AWS::EC2::SubnetNetworkAclAssociation
  Properties:
    SubnetId: !Ref CorporatePublicSubnet1
    NetworkAclId: !Ref CorporatePublicSubnetAcl
CorporatePublicSubnetAclAssociation2:
  Type: AWS::EC2::SubnetNetworkAclAssociation
  Properties:
    SubnetId: !Ref CorporatePublicSubnet2
    NetworkAclId: !Ref CorporatePublicSubnetAcl
